--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   padding-top: var(--main-padding);
   padding-bottom: var(--main-padding);
   position: relative;
+  margin-bottom: -213px;
   /* z-index: -99999999; */
 
 }
@@ -56,7 +57,7 @@
   grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
   row-gap: 80px;
   column-gap: 40px;
-  transform: translateY(389px);
+  transform: translateY(50px);
  
 
 }
@@ -147,10 +148,10 @@
 /* end the admin page */
 /*start testi*/
 .testi {
-  padding-top: var(--main-padding);
-  padding-bottom: var(--main-padding);
+  /* padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding); */
   position: relative;
-  transform: translatey(525px);
+  transform: translatey(350px);
 
 }
 .testi .container {
@@ -283,14 +284,17 @@ transform: translateY(-13px);
 /* end main title */
 /*start featurs*/
 .featurs{
-  padding-top: var(--main-padding);
-  padding-bottom: var(--main-padding);
+  /* padding-top: var(--main-padding);
+  padding-bottom: var(--main-padding); */
+  padding-bottom: 80px;
+  padding-top: 80px;
   position: relative;
 }
 .featurs .container {
   display: grid;
   grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
-  gap: 40px;
+  gap: 80px;
+  transform: translateX(-3px);
 }
 .featurs .container .box {
   text-align: center;
@@ -784,5 +788,11 @@ transform: translateY(-13px);
   padding-left: 20px; */
   margin-right: 20px;
   margin-left: 20px;
+}
+@media (max-width: 767px) {
+  .my-container {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
 }
 /*end animation*/
