--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,8 @@ html::-webkit-scrollbar-thumb {
   background-color: var(--dark-color);
   border-radius: 15px;
 }
+
+ .my-btn {
+  background-image: linear-gradient(90deg, black 17%, #737373);
+  opacity: 0.8;
+}
