--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   /* background-color: var(--main-color); */
   background-image: url("https://images.unsplash.com/photo-1615799998603-7c6270a45196?q=80&w=1604&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-size: contain;
-
+  top: 0 !important;
 }
 
 a {
@@ -79,3 +79,4 @@ html::-webkit-scrollbar-thumb {
   background-image: linear-gradient(90deg, black 17%, #737373);
   opacity: 0.8;
 }
+
